--- a/styles.css
+++ b/styles.css
@@ -39,56 +39,54 @@ p{
     position: relative;
 }
 
-.third-container .vertical-line{
-    border-left: 2px solid grey;
-    height: 100%;
-    position: absolute;
-    left: 50%;
-    top: 0;
-    margin-left: -3px;
-}
 
-.creative-skills{
-    margin-right: 50%;
+
+.skills{
+    margin-left: 10%;
     margin-top: -20%;
     font-weight: bold;
     font-size: 30px;
+    text-align: center;
+    position: relative;
+
 }
 
-.creative-skills-text{
-    margin-right: 60%;
+/* .creative-skills-text{
+    margin-right: 20%;
     margin-left: 10%;
     margin-top: 10%;
     text-align: center;
     position: relative;
     margin-bottom: 10%;
-}
+} */
 
-.skills-list{
-    list-style-type: none;
-    margin-right: 55%;
-    margin-top: 1%;
-}
-
-.programming-skills{
-    margin-left: 10%;
-    top: -300px;
-    font-weight: bold;
-    font-size: 30px;
-    text-align: center;
-}
-
-.programming-skills-text{
+.skills-text{
     margin-right: 20%;
     margin-left: 30%;
     margin-top: 10%;
     text-align: center;
     position: relative;
-    margin-bottom: 10%;
+    margin-bottom: 15%;
 }
 
+
+.skills-list{
+    list-style-type: none;
+    margin-left: 5%;
+    margin-top: 1%;
+    text-align: center;
+    justify-content: center;
+    position: relative;
+
+}
+
+.programming{
+    margin-bottom: 5%;
+}
+
+
 .box{
-    border-right: 1px solid black;
+    border-right: 1px solid grey;
 }
 
 .work-experience {
@@ -119,16 +117,27 @@ p{
 .container-fluid-fourth-container{
     height: 100%;
     width: 100%;
-    background-color: aquamarine;
+    background-color: #b2e2a9;
     position: relative;
     padding-top: 5%;
     padding-bottom: 5%;
 }
 
+.coursework{
+    margin-left: 5%;
+}
+
+/* .container-fluid-last{
+    height:100%;
+    width:100%;
+    padding: 15%;
+    background-color: rgb(198, 187, 219);
+    position:relative;
+    text-align: none;
+
+} */
 @media(min-width: 1028px){
-    .change{
-        background-color: red;
-    }
+    
     .dates{
         margin-left:2%;
         width:50%;
