--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,18 @@
 body{
     font-family: 'Courier New', Courier, monospace;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 nav{
     background-color:  rgb(250, 248, 208);
 }
 
+.col{
+    display: block;
+    margin: auto;
+}
 
 img{
     border-radius: 200px;
@@ -29,6 +36,33 @@ p{
     margin-left: 25%;
     margin-right: 25%;
 }
+
+.intro-container{
+    height: 100%;
+    width: 100%;
+    padding: 20%;
+    font-size: 20px;
+    justify-content: center;
+    background-color: rgb(198, 187, 219);
+    text-align: center;
+    position: relative;
+}
+
+/* .text{
+    margin-left: 20%;
+    justify-content: center;
+}
+.photo{
+    margin-right:20% ;
+    margin-left: 20%;
+}
+.photo img{ */
+    /* border-radius: 50%; */
+    /* width:300px;
+    height:300px;
+    object-fit: cover;
+} */
+
 .container-fluid {
     height: 100%;
     width: 100%;
@@ -39,51 +73,11 @@ p{
     position: relative;
 }
 
-
-
-.skills{
-    margin-left: 10%;
-    margin-top: -20%;
-    font-weight: bold;
-    font-size: 30px;
-    text-align: center;
-    position: relative;
-
+.container-skills {
+    display: flex;
+    min-height: 100vh;
+    background-color: rgb(198, 187, 219);
 }
-
-/* .creative-skills-text{
-    margin-right: 20%;
-    margin-left: 10%;
-    margin-top: 10%;
-    text-align: center;
-    position: relative;
-    margin-bottom: 10%;
-} */
-
-.skills-text{
-    margin-right: 20%;
-    margin-left: 30%;
-    margin-top: 10%;
-    text-align: center;
-    position: relative;
-    margin-bottom: 15%;
-}
-
-
-.skills-list{
-    list-style-type: none;
-    margin-left: 5%;
-    margin-top: 1%;
-    text-align: center;
-    justify-content: center;
-    position: relative;
-
-}
-
-.programming{
-    margin-bottom: 5%;
-}
-
 
 .box{
     border-right: 1px solid grey;
@@ -114,6 +108,22 @@ p{
     position:relative;
 } 
 
+.section {
+    flex: 1;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.down{
+    margin-top: 30px;
+}
+.left-section, .right-section {
+    max-width: 50%;
+    flex:1;
+}
+
 .container-fluid-fourth-container{
     height: 100%;
     width: 100%;
@@ -127,7 +137,7 @@ p{
     margin-left: 5%;
 }
 
-/* .container-fluid-last{
+.container-fluid-last{
     height:100%;
     width:100%;
     padding: 15%;
@@ -135,7 +145,8 @@ p{
     position:relative;
     text-align: none;
 
-} */
+}
+
 @media(min-width: 1028px){
     
     .dates{
